--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano<samp>_</samp> </h2>
         <div class="botoes">
-            <button class="botao">Concluir o Ensino Medio</button>
+            <button class="botao ativo">Concluir o Ensino Medio</button>
             <button class="botao">Viajar</button>
             <button class="botao">Focar nos Estudos</button>
             <button class="botao">Ser Aprovada na Universidade</button>
         </div>
     </section>
+    <script src="main.js"></script>
+    
     
 </body>
 </html>
