--- a/index.html
+++ b/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus objetivos do ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano<samp>_</samp> </h2>
-        <div class="botoes">
-            <button class="botao ativo">Concluir o Ensino Medio</button>
-            <button class="botao">Viajar</button>
-            <button class="botao">Focar nos Estudos</button>
-            <button class="botao">Ser Aprovada na Universidade</button>
+
+        <div class="conteudo">
+            <div class="botoes">
+                <button class="botao ativo">Concluir o Ensino Medio </button>
+                <button class="botao">Viajar</button>
+                <button class="botao">Focar nos Estudos</button>
+                <button class="botao">Ser Aprovada na Universidade</button>
+            </div>
+
+            <div class="abas-textos">
+                <div class="aba-conteudo ativo">
+                    <h3 class="aba-conteudo-titulo-principal">Concluir o Ensino Medio</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Viajar</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Focar nos Estudos</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Ser Aprovada na Universidade</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
-    
-    
+
+
 </body>
+
 </html>
