--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
                 <div class="aba-conteudo ativo">
                     <h3 class="aba-conteudo-titulo-principal">Concluir o Ensino Medio</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Viajar</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Focar nos Estudos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Ser Aprovada na Universidade</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
             </div>
         </div>
